--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptación</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>El pablo no le sabe</h1>
-    <h2>ayuda</h2>
+    <h1>Encriptación y desencriptación</h1>
+    <input type="text" placeholder="Ingresa texto a encriptar" id="txtEncriptar" name="txtDes"> <br><br>
+    <button onclick="encriptar()">Encriptar</button>
+    <script src="encriptado.js"></script>
 </body>
+
 </html>
